--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.8.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
