--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "mongoose": "^8.8.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
